<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crud">

    <EditText
        android:id="@+id/editTextNameCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="128dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/nome_do_curso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSubmitNameCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:text="@string/salvar_curso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameCourse" />

    <EditText
        android:id="@+id/editTextDeletebyId"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="260dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/id_do_curso_a_ser_exclu_do"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextSizeCheck" />

    <Button
        android:id="@+id/btnSearchByID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/consultar_pelo_id"
        android:textColor="#37474F"
        android:textColorLink="#E91E1E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameCourse" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="468dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/volta_para_home"
        android:textColor="#37474F"
        android:textColorLink="#E91E1E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameCourse" />

    <EditText
        android:id="@+id/editTextSearchById"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="380dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/consultar_pelo_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnDeleteCoursebyid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="136dp"
        android:backgroundTint="#E91E63"
        android:text="@string/excluir_curso_por_id"
        android:textColor="#000000"
        android:textColorLink="#E91E1E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameCourse" />

    <TextView
        android:id="@+id/textInfoDatabase"
        android:layout_width="275dp"
        android:layout_height="131dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="29dp"
        android:text="@string/informa_es_do_banco_de_dados"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearchByID"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>